--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "league/csv": "^9.12"
+        "league/csv": "^9.12",
+        "twilio/sdk": "^7.14"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
